# topaz-1

./: .gitignore  CMakeLists.txt  CMakeSettings.json  update.sh
START/: BROKER.cmd  START_ALL.cmd  START_CONNECT.cmd  START_GAME.cmd  START_SEARCH.cmd
conf/default/: login.conf  map.conf  search_server.conf  server_message.conf
helpful sql/: Convenient Commands.txt  Ivalice_Customizations.sql  TableBackup.bat  determine_item_pricing.sql  giving_trusts_gear.sql  herpderp.sql  item_armor sync.sql  spell_list sync.sql
res/: ability_recasts.lua  action_messages.lua  auto_translates.lua  connectserver.rc  gameserver.rc  job_abilities.lua  searchserver.rc  spells.lua
scripts/commands/: addallspells.lua  addcurrency.lua  addcustomgambit.lua  addeffect.lua  addgambit.lua  additem.lua  addkeyitem.lua  addmission.lua  addquest.lua  addspell.lua  addtempitem.lua  addtreasure.lua  ah.lua  animatenpc.lua  animatesubnpc.lua  animation.lua  bring.lua  capskill.lua  changejob.lua  changesjob.lua  completemission.lua  completequest.lua  costume.lua  cs2.lua  delcurrency.lua  deleffect.lua  deletegambit.lua  delitem.lua  delkeyitem.lua  delmission.lua  delquest.lua  delspell.lua  getgambits.lua  getid.lua  givegil.lua  giveitem.lua  givexp.lua  godmode.lua  goto.lua  mobhere.lua  (+18 more)
scripts/globals/: ability.lua  (+64 more)
sql/: DSP_Import.bat  augments.sql  char_effects.sql  char_mods.sql  exp_table.sql  guild_shops.sql  magian.sql  mods.sql  skill_ranks.sql  synth_recipes.sql  trust_equipment.sql  trust_mod_settings.sql  vendor_sales.txt
src/login/: CMakeLists.txt  login.cpp
src/search/: CMakeLists.txt  search.cpp
tools/: dbtool.py  install-systemd-service.sh  price_checker.py  wait_for_db_then_launch.sh
(+754 files in other folders)
